# RobotProject

./: Cargo.toml  README.md  argparse  base64  bind.sh  bluetooth  build.rs  client  getpass  os  platform  re  readme  run.sh  runclient.sh  sys
.VSCodeCounter/2023-11-03_16-49-55/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-11-03_16-51-06/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-11-03_16-52-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-11-03_16-52-56/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-01-10_23-40-16/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
bluez/: bluegen.h
bluez/client/: main.c
bluez/include/: b_device.h  device.h  u_device.h  utility.h
bluez/server/: main.c
bluez/shared/: b_device.c  device.c  u_device.c  u_s_device.c
bluez/utility/: utility.c
dobot/camera/: camera.c
dobot/commands/: command.c
dobot/device/: device.c  u_device.c  u_s_device.c
dobot/include/: command.h  device.h
src/: bindings.rs  image.rs  lib.rs  main.rs  ordering.rs  position.rs
src/bluez/: main.c  scan.c  scan.h
src/camera/: mod.rs
src/cbinding/: bindings.rs  mod.rs
src/client/: main.rs
src/protocol/: mod.rs  robotprotocol.rs
src/server/: main.rs
(+9 files in other folders)
