[package]
name = "RobotProject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = "0.16.1"
rand = "0.8.5"
tokio = { version = "1.32", features = ["full"] }
uuid = "1.4.1"
my_c_library = { path = "libclient.so"}