[package]
name = "robotproject"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cc = "1.0.83"
glob = "0.3.1"
bindgen = "0.68.1"


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
