[package]
name = "robotproject"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
image = "0.24.7"
colors-transform = "0.2.11"
serde_derive = "1.0.193"
serde_json = "1.0.108"

[build-dependencies]
cc = "1.0.83"
glob = "0.3.1"
bindgen = "0.68.1"

